# Dirac-

./: .gitignore  BetheHeitler.C  Brems.C  CITATION.cff  CMakeLists.txt  Complex.h  Compton.C  DiracPackage.h  DiracxxConfig.h.in  INSTALL  LorentzPackage.h  Makefile  Makefile.orig  Pairs.C  PauliPackage.h  Qpolar.C  README.md  TCrossSection.cxx  TCrossSection.h  TCrossSection_v1.cxx  TCrossSection_v1.h  TDiracMatrix.cxx  TDiracMatrix.h  TDiracMatrixLinkDef.h  TDiracSpinor.cxx  TDiracSpinor.h  TDiracSpinorLinkDef.h  TFourVectorComplex.cxx  TFourVectorComplex.h  TFourVectorReal.cxx  TFourVectorReal.h  TFourVectorRealLinkDef.h  TLepton.cxx  TLepton.h  TLorentzBoost.cxx  TLorentzBoost.h  TLorentzTransform.cxx  TLorentzTransform.h  TPauliMatrix.cxx  TPauliMatrix.h  (+18 more)
include/: Double.h  TCrossSection_v1.h  TDiracMatrix.h  TFourVectorComplex.h  TFourVectorReal.h  TLepton.h  TLorentzBoost.h  TLorentzTransform.h  TPauliSpinor.h  TPhoton.h  TThreeRotation.h  constants.h
python/: diracxx.py
rootmacros/: Brems.C
src/: CMakeLists.txt  TCrossSection.cxx  TDiracMatrix.cxx  TDiracSpinor.cxx  TFourVectorComplex.cxx  TPauliMatrix.cxx  TPauliSpinor.cxx  TPhoton.cxx  TThreeRotation.cxx  TThreeVectorComplex.cxx  TThreeVectorReal.cxx  debug.cxx  python_bindings.cxx
